--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Calculator -->
-     <div class="calculator"></div>
+     <!-- Calculator -->
+     <div class="calculator">
         <!-- Display -->
-         <div class="calculator-display">
+        <div class="calculator-display">
             <h1>1234567890</h1>
-         </div>
-         <!-- Buttons -->
-          <div class="calculator-buttons">
+        </div>
+        <!-- Buttons -->
+        <div class="calculator-buttons">
             <button class="operator" value="+">+</button>
             <button class="operator" value="-">-</button>
             <button class="operator" value="*">×</button>
@@ -33,7 +32,8 @@
             <button value="0">0</button>
             <button class="clear" id="clear-btn">C</button>
             <button class="equal-sign operator" value="=">=</button>
-          </div>
+        </div>
+     </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
